# otus-ml-prof

./: .gitignore  README.md  pyproject.toml
home_work/: hw_01.ipynb  hw_02.ipynb  hw_03.ipynb  hw_04.ipynb  hw_05.ipynb  hw_06.ipynb  hw_07.ipynb  hw_08.ipynb
