[project]
name = "ml-prof"
version = "0.1.0"
description = "OTUS ML-Prof course"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.12.0",
    "albumentations>=2.0.8",
    "beautifulsoup4>=4.14.2",
    "catboost>=1.2.8",
    "datasets>=4.5.0",
    "fake-useragent>=2.2.0",
    "free-proxy>=1.1.3",
    "gevent>=25.9.1",
    "graphviz>=0.21",
    "hdbscan>=0.8.40",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.5",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "sentencepiece>=0.2.1",
    "transformers>=5.1.0",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.0",
]
